<resources>
    <string name="app_name">Pynny</string>
    <string name="all_categories_label">Categories</string>
    <string name="title_activity_categories">Categories</string>
    <string name="category_list_item_name">Name</string>
    <string name="category_list_item_id">ID</string>
    <string name="category_is_income_label">Is Income?</string>
    <string name="all_wallets_label">Wallets</string>
    <string name="all_transactions_label">Transactions</string>
    <string name="all_budgets_label">Budgets</string>
    <string name="create_category_name_label">Name: </string>
    <string name="create_category_is_income_label">Is Income: </string>
    <string name="create_category_button_label">Create Category</string>
    <string name="create_wallet_name_label">Name: </string>
    <string name="create_wallet_start_balance_label">Initial Balance:</string>
    <string name="create_wallet_button_label">Create Wallet</string>
    <string name="create_transaction_wallet_label">Wallet</string>
    <string name="create_transaction_category_label">Category</string>
    <string name="create_transaction_description_label">Description</string>
    <string name="create_transaction_created_at_label">Created At</string>
    <string name="create_transaction_amount_label">Amount</string>
    <string name="create_transaction_button_label">Create Transaction</string>
    <string name="create_budget_wallet_label">Wallet</string>
    <string name="create_budget_category_label">Category</string>
    <string name="create_budget_goal_label">Goal</string>
    <string name="create_budget_submit_btn">Create Budget</string>
    <string name="one_transaction_delete_btn_label">Delete Transaction</string>
    <string name="one_budget_delete_btn_label">Delete Budget</string>
    <string name="one_wallet_delete_btn_label">Delete Wallet</string>
    <string name="one_category_delete_btn_label">Delete Category</string>
    <string name="get_report">View Report</string>

    <string name="total_expenses">Total Expenses: $%1$.2f</string>
    <string name="total_income">Total Income: $%1$.2f</string>
    <string name="report_export_btn">Save Report</string>
</resources>
